# velos

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md
.planning/phases/01-gpu-foundation-spikes/: 01-01-PLAN.md  01-02-PLAN.md  01-03-PLAN.md  01-RESEARCH.md  01-VALIDATION.md
.planning/phases/03-motorbike-sublane-pedestrians/: 03-01-SUMMARY.md
.planning/phases/04-mobil-wiring-phase2-verification/: 04-01-PLAN.md
.planning/phases/05-foundation-gpu-engine/: 05-02-SUMMARY.md  05-04-SUMMARY.md  05-VALIDATION.md
.planning/phases/06-agent-models-signal-control/: 06-01-SUMMARY.md  06-06-SUMMARY.md  06-07-SUMMARY.md  06-CONTEXT.md
.planning/phases/07-intelligence-routing-prediction/: 07-03-SUMMARY.md  07-04-SUMMARY.md  07-06-SUMMARY.md
.planning/phases/08-tuning-vehicle-behavior-to-more-realistic-in-hcm/: 08-02-SUMMARY.md  08-03-SUMMARY.md  08-VALIDATION.md  08-VERIFICATION.md
.planning/phases/09-sim-loop-integration-startup-frame-pipeline/: 09-03-SUMMARY.md
.planning/phases/10-sim-loop-integration-bus-dwell-meso-micro/: 10-01-SUMMARY.md  10-VALIDATION.md
.planning/phases/13-final-integration-wiring-gpu-transfer-audit/: 13-03-SUMMARY.md
.planning/phases/14-wire-gtfs-bus-stops-pipeline/: 14-01-SUMMARY.md
.planning/phases/15-file-size-reduction-housekeeping/: 15-01-SUMMARY.md  15-02-SUMMARY.md
.planning/phases/16-intersection-sublane-model/: 16-01-SUMMARY.md  16-02-SUMMARY.md  16-03-SUMMARY.md  16-04-SUMMARY.md  16-CONTEXT.md  16-VALIDATION.md
.planning/phases/17-detection-ingestion-demand-calibration/: 17-01-PLAN.md  17-01-SUMMARY.md  17-02-PLAN.md  17-03-PLAN.md  17-04-PLAN.md  17-RESEARCH.md
.planning/phases/18-3d-rendering-core/: 18-01-SUMMARY.md  18-02-SUMMARY.md  18-04-SUMMARY.md  18-CONTEXT.md  18-RESEARCH.md  18-VERIFICATION.md
.planning/phases/19-3d-city-scene/: 19-03-SUMMARY.md  19-CONTEXT.md  19-RESEARCH.md
.planning/phases/20-real-time-calibration/: 20-01-PLAN.md  20-01-SUMMARY.md  20-02-PLAN.md  20-02-SUMMARY.md  20-CONTEXT.md  20-RESEARCH.md  20-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/todos/pending/: 2026-03-09-fix-critical-performance-regression-at-8k-agents.md
crates/velos-api/: Cargo.toml  build.rs
crates/velos-api/src/: aggregator.rs  bridge.rs  calibration.rs  camera.rs  detection.rs  error.rs  lib.rs
crates/velos-core/: Cargo.toml
crates/velos-core/src/: cfl.rs  components.rs  error.rs  lib.rs
crates/velos-core/tests/: components_tests.rs
crates/velos-demand/: Cargo.toml
crates/velos-gpu/: Cargo.toml
crates/velos-gpu/benches/: dispatch.rs
crates/velos-gpu/shaders/: billboard_3d.wgsl  guide_line.wgsl  map_tile.wgsl  mesh_3d.wgsl  pedestrian_adaptive.wgsl  road_surface.wgsl  wave_front.wgsl
crates/velos-gpu/src/: app.rs  app_egui.rs  app_input.rs  camera.rs  compute.rs  cpu_reference.rs  lib.rs  lighting.rs  map_tiles.rs  mesh_loader.rs  multi_gpu.rs  orbit_camera.rs  partition.rs  ped_adaptive.rs  perception.rs  renderer.rs  renderer3d.rs  road_surface.rs  sim.rs  sim_calibration.rs  sim_helpers.rs  sim_junction.rs  sim_lifecycle.rs  sim_meso.rs  sim_mobil.rs  sim_pedestrians.rs  sim_perception.rs  sim_render.rs  sim_snapshot.rs  sim_startup.rs  sim_vehicles.rs
crates/velos-gpu/tests/: boundary_protocol_tests.rs  cf_model_switch.rs  gpu_params_tests.rs  gpu_physics.rs  integration_bus_dwell.rs  integration_emergency_wiring.rs  integration_meso_micro.rs  integration_perception_wiring.rs  mobil_wiring_tests.rs  wave_front_validation.rs
crates/velos-meso/: Cargo.toml
crates/velos-meso/src/: buffer_zone.rs  queue_model.rs  zone_config.rs
crates/velos-meso/tests/: buffer_zone_tests.rs  queue_model_tests.rs
crates/velos-net/: Cargo.toml
crates/velos-net/src/: building_import.rs  cleaning.rs  error.rs  graph.rs  junction.rs  lib.rs  osm_import.rs  routing.rs  snap.rs  spatial.rs  sumo_demand.rs  sumo_import.rs
crates/velos-net/src/cch/: mod.rs  ordering.rs  topology.rs
crates/velos-net/tests/: cch_tests.rs  cleaning_tests.rs  hcmc_rules_tests.rs  import_tests.rs  routing_tests.rs  spatial_tests.rs  sumo_net_import.rs  sumo_rou_import.rs
crates/velos-predict/: Cargo.toml
crates/velos-predict/src/: adaptive.rs  bpr.rs  ets.rs  historical.rs  lib.rs  overlay.rs
crates/velos-predict/tests/: ensemble_tests.rs
crates/velos-signal/: Cargo.toml
crates/velos-signal/src/: actuated.rs  config.rs  detector.rs  lib.rs
crates/velos-signal/tests/: actuated_tests.rs  detector_tests.rs
crates/velos-vehicle/: Cargo.toml
crates/velos-vehicle/src/: bus.rs  config.rs  error.rs  gridlock.rs  idm.rs  intersection.rs  junction_traversal.rs  krauss.rs  lib.rs  mobil.rs  social_force.rs  sublane.rs  types.rs
crates/velos-vehicle/tests/: bus_tests.rs  config_tests.rs  gridlock_tests.rs  idm_tests.rs  intersection_tests.rs  krauss_tests.rs  mobil_tests.rs  social_force_tests.rs  sublane_tests.rs  types_tests.rs
data/hcmc/: overrides.toml  signal_config.toml  vehicle_params.toml
docs/: VELOS-API-Contract-Reference.md  VELOS-Deployment-Infrastructure-Guide.md  digital-twin-solution-research-report.md  rebuild-sumo-architecture-plan.md  velos-3d-visualization-architecture.md  velos-agent-intelligence-and-prediction.md  velos-architecture-review.md  velos-rust-parallel-frameworks-and-reusable-oss.md  velos-self-hosted-open-data-tile-map.md
docs/architect/: 00-architecture-overview.md  01-simulation-engine.md  02-agent-models.md  03-routing-prediction.md  04-data-pipeline-hcmc.md  05-visualization-api.md  06-infrastructure.md  07-timeline-risks.md
scripts/: download-map-tiles.sh
tests/fixtures/: simple.net.xml  simple.rou.xml
tools/python/: detection_client.py
(+143 files in other folders)
