[workspace]
resolver = "2"
members = ["crates/velos-core", "crates/velos-gpu", "crates/velos-net", "crates/velos-vehicle", "crates/velos-demand", "crates/velos-signal", "crates/velos-meso", "crates/velos-predict"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Tin Dang"]
license = "MIT"

[workspace.dependencies]
wgpu = "27"
hecs = "0.11"
winit = "0.30"
bytemuck = { version = "1", features = ["derive"] }
thiserror = "2"
log = "0.4"
env_logger = "0.11"
glam = "0.29"
pollster = "0.4"
osmpbf = "0.3"
petgraph = "0.6"
rstar = "0.12"
rand = "0.8"
egui = "0.33"
egui-wgpu = "0.33"
egui-winit = "0.33"
quick-xml = "0.37"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
postcard = { version = "1", features = ["alloc"] }
arc-swap = "1"
