[package]
name = "velos-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "gRPC detection ingestion service with async-sync bridge"

[dependencies]
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
arc-swap = { workspace = true }
rstar = { workspace = true }
tokio-stream = { workspace = true }
velos-net = { path = "../velos-net" }

[build-dependencies]
tonic-build = { workspace = true }
tonic-prost-build = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "test-util"] }
