[package]
name = "velos-gpu"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
gpu-tests = []

[[bin]]
name = "velos-gpu"
path = "src/main.rs"

[dependencies]
velos-core = { path = "../velos-core" }
wgpu = { workspace = true }
hecs = { workspace = true }
bytemuck = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
glam = { workspace = true }
pollster = { workspace = true }
env_logger = { workspace = true }
winit = { workspace = true }
egui = { workspace = true }
egui-wgpu = { workspace = true }
egui-winit = { workspace = true }
velos-net = { path = "../velos-net" }
velos-vehicle = { path = "../velos-vehicle" }
velos-demand = { path = "../velos-demand" }
velos-signal = { path = "../velos-signal" }
rand = { workspace = true }
petgraph = { workspace = true }
rayon = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "dispatch"
harness = false
