[package]
name = "velos-gpu"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
gpu-tests = []

[[bin]]
name = "velos-gpu"
path = "src/main.rs"

[dependencies]
velos-core = { path = "../velos-core" }
wgpu = { workspace = true }
hecs = { workspace = true }
bytemuck = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
glam = { workspace = true }
pollster = { workspace = true }
env_logger = { workspace = true }
winit = { workspace = true }
egui = { workspace = true }
egui-wgpu = { workspace = true }
egui-winit = { workspace = true }
velos-net = { path = "../velos-net" }
velos-vehicle = { path = "../velos-vehicle" }
velos-demand = { path = "../velos-demand" }
velos-signal = { path = "../velos-signal" }
velos-predict = { path = "../velos-predict" }
velos-meso = { path = "../velos-meso" }
rand = { workspace = true }
petgraph = { workspace = true }
rayon = "1"
pmtiles2 = "0.3"
mvt-reader = "2.3"
earcutr = "0.5"
flate2 = "1"
lru = "0.12"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
naga = { version = "27", features = ["wgsl-in"] }

[[bench]]
name = "dispatch"
harness = false
