[package]
name = "velos-net"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Road graph, OSM import, spatial index, and routing for VELOS"

[dependencies]
osmpbf = { workspace = true }
petgraph = { workspace = true }
rstar = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
quick-xml = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
postcard = { workspace = true }
velos-signal = { path = "../velos-signal" }

[dev-dependencies]
env_logger = { workspace = true }
tempfile = { workspace = true }
