[package]
name = "velos-vehicle"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "IDM car-following, MOBIL lane-change, VehicleType enum, and gridlock detection"

[dependencies]
log.workspace = true
rand.workspace = true
thiserror.workspace = true

[dev-dependencies]
rand = { workspace = true }
